@@ -91,6 +91,8 @@ CR: Test: Review and optimization
       Trace-Response-Hash, Trace-Response-Header-Hash, Trace-Response-Data-Hash
       Trace-Storage-Hash
       TODO: Add description in manual
+CR: Docker: Added support as Docker image
+    TODO: Add description in manual
 
 1.3.1 20240801
 BF: Review: Optimization/Corrections
